# hailo-media-library

./: .clang-format  .clang-tidy  .pre-commit-config.yaml  LICENSE  README.md  README.rst  meson.build  meson_options.txt
api/: meson.build
api/examples/: calculate_text_size_osd.cpp  config_tuning_gst_application.cpp  encoder_config_example.json  encoder_example.cpp  frontend_config_example.json  frontend_encoder_jpeg_sink1.json  frontend_encoder_sink0.json  frontend_encoder_sink1.json  frontend_encoder_sink2.json  frontend_encoder_sink3.json  frontend_example.cpp  frontend_native_config_example.json  jpeg_encoder_config_example.json  lowlight_r0225c8_profile.json  lowlight_r0225c8_profile_jpeg.json  medialib_config.json  medialib_config_jpeg.json  polygon_example.cpp  preproc_config_example.json  profile.json  profile_hdr.json  profile_hdr_jpeg.json  profile_jpeg.json  vision_preproc_example.cpp
api/examples/config_examples/: encoder_config_example.json  frontend_config_example.json  frontend_encoder_jpeg_sink1.json  frontend_encoder_sink0.json  frontend_encoder_sink1.json  frontend_encoder_sink2.json  frontend_encoder_sink3.json  frontend_native_config_example.json  jpeg_encoder_config_example.json  medialib_config.json  medialib_config_jpeg.json
api/examples/lowlight_r0225c8/: application_settings.json  sensor_config.json
api/examples/lowlight_r0225c8_jpeg/: application_settings.json  lowlight_r0225c8_profile_jpeg.json
api/examples/native/: main.cpp  user_stages.hpp
api/examples/profile/: osd_sink0.json  sensor_config.json
api/examples/profile_hdr_jpeg/: osd_sink1.json  profile_hdr_jpeg.json
api/examples/profile_jpeg/: application_settings.json  encoder_sink1.json
api/include/media_library/: encoder.hpp  frontend.hpp  media_library.hpp  media_library_api_types.hpp  medialib_config_manager.hpp  utils.hpp
api/src/encoder/: encoder.cpp  encoder_internal.hpp
api/src/frontend/: frontend.cpp  frontend_internal.hpp
api/src/media_library/: media_library.cpp  media_library_api_types.cpp  medialib_config_manager.cpp
api/src/utils/: utils.cpp
common_meson/: git_metadata.cpp  meson.build
docs/: Doxyfile.in  meson.build
executables/: meson.build
gst/: gstmedialib.cpp  meson.build
gst/buffer_utils/: buffer_utils.cpp  buffer_utils.hpp  gsthailobuffermeta.cpp  gsthailobuffermeta.hpp
gst/common/: gstmedialibcommon.cpp  gstmedialibcommon.hpp  gstmedialibptrs.cpp  gstmedialibptrs.hpp
gst/defog/: gsthailodefog.cpp  gsthailodefog.hpp
gst/denoise/: gsthailodenoise.cpp  gsthailodenoise.hpp  gstnativedenoise.cpp  gstnativedenoise.hpp
gst/dewarp/: gsthailodewarp.cpp  gsthailodewarp.hpp
gst/dsp/: gsthailodsp.c  gsthailodsp.h  gsthailodspbasetransform.cpp  gsthailodspbasetransform.hpp  gsthailodspbufferpool.cpp  gsthailodspbufferpool.hpp  gsthailodspbufferpoolutils.cpp  gsthailodspbufferpoolutils.hpp
gst/encodebin/: gsthailoencodebin.cpp  gsthailoencodebin.hpp
gst/encoder/: gsthailoenc.cpp  gsthailoenc.hpp  gsthailoh264enc.cpp  gsthailoh264enc.hpp  gsthailoh265enc.cpp  gsthailoh265enc.hpp
gst/frontend/: gsthailofrontend.cpp  gsthailofrontend.hpp  gsthailofrontendbinsrc.cpp  gsthailofrontendbinsrc.hpp  hdr.cpp  hdr.hpp
gst/hailo_encoder/: gsthailoencoder.cpp  gsthailoencoder.hpp
gst/image_freeze/: gsthailoimagefreeze.cpp  gsthailoimagefreeze.hpp
gst/jpeg/: gsthailojpeg.cpp  gsthailojpeg.hpp
gst/multi_resize/: gsthailomultiresize.cpp  gsthailomultiresize.hpp
gst/osd/: alignment.cpp  gsthailoosd.cpp  gsthailoosd.hpp  osd.cpp  osd.hpp  osd_impl.cpp  osd_impl.hpp  osd_utils.hpp
gst/osd/impl/: background_text_overlay_impl.cpp  background_text_overlay_impl.hpp  blender_impl.cpp  blender_impl.hpp  custom_overlay_impl.cpp  custom_overlay_impl.hpp  datetime_overlay_impl.cpp  datetime_overlay_impl.hpp  image_overlay_impl.cpp  image_overlay_impl.hpp  overlay_impl.cpp  overlay_impl.hpp  simple_text_overlay_impl.cpp  simple_text_overlay_impl.hpp  text_overlay_impl.cpp  text_overlay_impl.hpp
gst/tests/: meson.build
gst/tests/check/: meson.build
gst/upload/: gsthailoupload.cpp  gsthailoupload.hpp
gst/utils/: gsthailodmabufallocator.cpp  gsthailodmabufallocator.hpp  gsthailodmabufferpool.cpp  gsthailodmabufferpool.hpp  gsthailodmabufferpoolutils.cpp  gsthailodmabufferpoolutils.hpp
gst/visionpreproc/: gsthailovisionpreproc.cpp  gsthailovisionpreproc.hpp
gst_plugin/: meson.build
hailo-analytics/: meson.build  meson_options.txt
hailo-analytics/apps/: meson.build
hailo-analytics/reference_camera_api/: meson.build
media_library/: meson.build
media_library/examples/: dis_config.txt  encoder_config.json  frontend_config.json  vision_config.json
media_library/include/media_library/: analytics_db.hpp  buffer_pool.hpp  common.hpp  config_manager.hpp  config_parser.hpp  defog.hpp  denoise.hpp  dewarp.hpp  dis_common.h  dma_buffer.hpp  dma_memory_allocator.hpp  dsp_utils.hpp  eis_types.hpp  encoder_class.hpp  encoder_common.hpp  encoder_config.hpp  encoder_config_types.hpp  env_vars.hpp  files_utils.hpp  gop_config.hpp  gyro_device.hpp  hailo_encoder.hpp  hailort_denoise.hpp  hdr_manager.hpp  isp_utils.hpp  json_config.hpp  logger_macros.hpp  media_library_buffer.hpp  media_library_logger.hpp  media_library_types.hpp  media_library_utils.hpp  multi_resize.hpp  pipe_handler.hpp  post_isp_denoise.hpp  pre_isp_denoise.hpp  privacy_mask.hpp  privacy_mask_types.hpp  sensor_registry.hpp  sensor_types.hpp  signal_utils.hpp  (+7 more)
media_library/src/analytics_db/: analytics_db.cpp
media_library/src/buffer_pool/: buffer_pool.cpp  dma_memory_allocator.cpp
media_library/src/config_manager/: config_manager.cpp  config_manager_schemas.hpp  meson.build  (+4 more)
webserver/: main.cpp  meson.build  meson.build.h15  meson.build.local
webserver/common/: common.hpp  logger_macros.hpp  webserver_logger.cpp
webserver/pipeline/: dummy_pipeline.cpp  pipeline.cpp  pipeline.hpp  pipeline_interface.cpp
webserver/resources/: ai.cpp  configs.cpp  encoder.cpp  frontend.cpp  isp.cpp  osd.cpp  privacy_mask.cpp  repository.cpp  repository.hpp  resources.hpp  webpage.cpp  webrtc.cpp
(+256 files in other folders)
